2008-06-11  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.c
	* glib/gspawn.c: Clarify what a "child pid" is in the doc
	comments.

2008-06-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 536158 – also bump GHashTable version when a node is removed via
	g_hash_table_iter_remove()/g_hash_table_iter_steal()

	* glib/ghash.c (iter_remove_or_steal): Bump the hash table 
	version. Patch by Jean-Yves Lefort

2008-06-07  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.c (g_access): Define X_OK if necessary (MSVC).

2008-06-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 531403 – g_utf8_collate broken on Mac.

	* glib/gunicollate.c:  (g_utf8_collate): use UCCompareTextDefault;
        (collate_key_to_string), (carbon_collate_key_with_collator),
        (carbon_collate_key), (carbon_collate_key_for_filename): new
        functions using Carbon API to get collate key for g_utf8_collate_key()
        and g_utf8_collate_key_for_filename();
        (g_utf8_collate_key), (g_utf8_collate_key_for_filename): use those.

2008-05-30  Michael Natterer  <mitch@imendio.com>

	Bug 535628 - test/patterntest.c still includes gpattern.h
	directly.

	* tests/patterntest.c: don't include "glib/gpattern.h" directly.
	Patch from Hiroyuki Ikezoe.

2008-05-30  Tor Lillqvist  <tml@novell.com>

	Bug 535625 - alias.h:2648: error: 'utime' undeclared here (not in
	a function)

	* glib/glib.symbols: Move g_utime inside #if !defined(G_OS_UNIX)
	|| defined(G_STDIO_NO_WRAP_ON_UNIX).

2008-05-30  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.c (g_access) [Win32]: Mask out X_OK to avoid problem
	on Vista. X_OK was just ignored by access() in earlier Microsoft C
	libraries. (Which is fine as executability has little meaning on
	Windows.) The one on Vista returns an error if X_OK is passed.

2008-05-29  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.h
	* glib/gstdio.c: Add g_utime(). No need to include <sys/utime.h>
	in gstdio.h, just use a forward struct declaration.

	* glib/glib.symbols: Add it.
